Revise header and call-to-action wording
Updated the header and call-to-action text for clarity and urgency.

--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
 <body>
   <div class="wrap">
     <header>
-      <h1>Mettiamo in sicurezza l’attraversamento di via Mezzocammino<br>(angolo via Filippo Raguzzini - Largo Sergi)</h1>
+      <h1>Incidente mortale a via Mezzocammino<br>(davanti via Filippo Raguzzini - Largo Sergi)</h1>
       <p class="lead">
         Il 29 dicembre 2025, intorno alle 16:45, un pedone di 69 anni è stato investito mortalmente sulle strisce in questo punto.
-        Qui passano anche molti studenti diretti ai licei Majorana e Plauto.
+        Qui passano anche molti studenti diretti ai licei Majorana e Plauto. Ogni giorno le auto che corrono mettono in serio pericolo altre persone.
       </p>
 
       <div class="toolbar" aria-label="Strumenti per la lettura">
@@ -194,7 +194,7 @@
     </header>
 
     <section class="card" aria-labelledby="ctaTitle">
-      <h2 id="ctaTitle">Basta 1 minuto</h2>
+      <h2 id="ctaTitle">Basta 1 tuo minuto. Non rimanere indifferente.</h2>
       <ol class="steps">
         <li>Apri un’email già pronta (testo e oggetto sono precompilati)</li>
         <li>Premi <strong>Invia</strong></li>
