Fix typo in call-to-action heading

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     </header>
 
     <section class="card" aria-labelledby="ctaTitle">
-      <h2 id="ctaTitle">Basta 1 tuo minuto. Non rimanere indifferente.</h2>
+      <h2 id="ctaTitle">Basta un tuo minuto. Non rimanere indifferente.</h2>
       <ol class="steps">
         <li>Apri un’email già pronta (testo e oggetto sono precompilati)</li>
         <li>Premi <strong>Invia</strong></li>
